[package]
name = "openai_dify_proxy"
version = "0.1.0"
edition = "2021"

[features]
default = ["logging"]
logging = ["env_logger"]

[dependencies]
actix-web = { version = "4.9.0", features = [] }
dotenv = "0.15.0"
env_logger = { version = "0.11.5", optional = true }
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
chrono = "0.4"
futures-util = "0.3.30"
bytes = "1.5.0"
actix-cors = "0.7.0"
mime_guess = "2.0.5"
uuid = { version = "1.3", features = ["v4"] }
image = { version = "0.25.2", features = ["default"] }
futures = "0.3.30"
awc = { version = "3.5.1" }
ipfs-api-backend-hyper = "0.6"
anyhow = "1.0.89"
mime = "0.3.17"
actix-http = "=3.9.0"
actix-multipart = "0.7.2"
